<resources>
    <string name="app_name">OffTrail</string>
    <string name="msg_splash">Carregando ...</string>
    <string name="button_sair">Sair</string>
    <string name="button_login">Entrar</string>
    <string name="edt_login">Entre com o login</string>
    <string name="edt_senha">Entre com a senha</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_nome_trilheiro">Nome do trilheiro</string>
    <string name="edit_idade_trilheiro">Idade do trilheiro</string>
    <string name="edit_moto_trilheiro">Moto do trilheiro</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="desc_app">App de gerenciamento para trilheiros.</string>
    <string name="copyright_app">Copyright © 2018 Adriana L. F. Alves, Deiziane Buganti</string>
    <string name="disciplina">Disciplina: Desenvolvimento Android</string>
    <string name="instituicao">Pós-Graduação, Unoesc - SMO</string>
    <string name="button_voltar">Voltar</string>
    <string name="action_sobre">Sobre</string>
    <string name="preferencias">Preferências</string>
    <string name="cor_fundo">Selecione a cor do plano de fundo:</string>
    <string name="btn_salvar">Salvar</string>
</resources>
